using gulp-sass which utilizes node-sass

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "sass",
     "css",
     "rtl",
-	"right-to-left"
+    "right-to-left"
   ],
   "license": "MIT",
   "devDependencies": {
@@ -28,6 +28,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-header": "^1.8.8",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0"
   }
 }
